# rs-web

./: .env.example  Cargo.toml  README.md  format.sh  t.sh
.github/workflows/: build.yml
api/: Cargo.toml
api/src/: comments.rs  flash.rs  lib.rs  posts.rs  request.rs  response.rs  users.rs
api/templates/banner_popups/: index.html.tera  new.html.tera
entity/: Cargo.toml
entity/src/: banner_popup.rs  comment.rs  lib.rs  post.rs  post_tag.rs  profile.rs  user.rs
middleware/: Cargo.toml
middleware/src/: axum.rs  lib.rs  tower.rs
migration/: Cargo.toml
migration/src/: banner_popup_table.rs  lib.rs  post_table.rs  user_table.rs
seeder/: Cargo.toml
seeder/src/: banner_popup_seeder.rs  lib.rs  post_seeder.rs  user_seeder.rs
service/: Cargo.toml
service/src/: delete.rs  insert.rs  lib.rs  mutation.rs  query.rs  save.rs
service/tests/: mock.rs  prepare.rs
src/: main.rs
src/models/: mod.rs
uitls/: Cargo.toml
uitls/src/: lib.rs
