[package]
name = "rs-web"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ ".","api","service", "entity", "migration", "seeder"]
[dependencies]
axum-api = { path = "api" }
serde_json = "1.0.145"




[workspace.dependencies]
tera = "1.20.0"
anyhow = "1.0.100"
tower-cookies = "0.11.0"
tower-http = "0.6.6"
tower = "0.5.2"
axum = "0.8.5"
chrono = "0.4.42"
dotenvy = "0.15.7"
redis = { version = "0.32.6", features = ["tokio-comp"] }
sea-orm = { git="https://github.com/SeaQL/sea-orm.git",branch="master"}
serde = "1.0.228"
tokio =  "1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
