[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros"] }
bcrypt.workspace = true
chrono = { workspace = true }
entity.workspace = true
migration.workspace = true
opentelemetry.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry_sdk.workspace = true
sea-orm = { workspace = true, features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print","schema-sync","entity-registry"] }
seeder.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
service.workspace = true
tera = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-cookies = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uitls.workspace = true
