[package]
name = "entity"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }

sea-orm = {  workspace = true,features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print"]}
