[package]
name = "seeder"
version = "0.1.0"
edition = "2024"


[lib]
name = "seeder"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
sea-orm = {  workspace = true,features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print"]}
