[package]
name = "seeder"
version = "0.1.0"
edition = "2024"

[lib]
name = "seeder"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
bcrypt.workspace = true
chrono = { workspace = true }
entity.workspace = true
migration.workspace = true
sea-orm-migration = { workspace = true }
